<resources>
    <string name="app_name">Tomodachi</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>


    <!-- Strings used for HomePage -->
    <string name="welcome_to">Welcome to</string>
    <string name="titleHP">Tomodachi</string>
    <string name="sub_title">Your ultimate guiding companion!</string>
    <string name="descriptionHP">Whether you\'re a first-time visitor or a seasoned traveler, our app is here to help you discover the hidden around the world.</string>
    <string name="lets_start">Let\'s start!</string>
    <string name="search">Search for a landmark</string>
    <string name="snap">Snap and  Discover  Landmarks</string>
    <string name="shops">Recomended  Shops</string>
    <string name="sign_up">Sign Up</string>
    <string name="empty" />


    <!-- Strings used for SnapPage -->
    <string name="titleSP">Subject-Placeholder</string>
    <string name="descriptionSP">Description-Placeholder</string>
    <string name="learn_more">Learn More</string>
</resources>